@@ -1,4 +1,5 @@
 Development
+    Improvements to shoutcast media/station info
     Add GetTitle to dbus methods
     Fix GetDuration and GetTime dbus methods
     Tag as 1.0.4b1
